# openhub-demo

./: .gitignore  .readthedocs.yaml  LICENSE.txt  Readme.md  requirements_docs.txt
anlagenbetreiber/: MANIFEST.in  README.md  configure.py  pyproject.toml  requirements.txt
anlagenbetreiber/deployments/full/: .env  deployment.yaml
anlagenbetreiber/deployments/production/: .env  deployment.yaml
anlagenbetreiber/src/anlagenbetreiber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
anlagenbetreiber/src/anlagenbetreiber/dataset/: inital_annotated_dataset.py
anlagenbetreiber/src/anlagenbetreiber/ml_lifecycle_utils/: ml_lifecycle_broker_facade.py  ml_lifecycle_subjects_name.py
anlagenbetreiber/src/anlagenbetreiber_services/edc_anlagenbetreiber/: edc_anlagenbetreiber_service.py  manifest.yaml  run.py
anlagenbetreiber/src/anlagenbetreiber_services/machinen_parametrierung/: machinen_parametrierung_service.py  manifest.yaml  run.py
anlagenbetreiber/src/anlagenbetreiber_services/mongo_database/: manifest.yaml  mongo_database_service.py  run.py
anlagenbetreiber/src/anlagenbetreiber_services/motiv_sensor/: manifest.yaml  motiv_sensor_service.py  run.py
dienstleister/: MANIFEST.in  README.md  configure.py  pyproject.toml  requirements.txt
dienstleister/deployments/full/: .env  deployment.yaml
dienstleister/deployments/production/: .env
dienstleister/src/dienstleister/data_processing/: pipeline_operations.py
dienstleister/src/dienstleister/ml_lifecycle_utils/: ml_lifecycle_broker_facade.py  ml_lifecycle_subjects_name.py
dienstleister/src/dienstleister/ml_training/: pytorch_utils.py
dienstleister/src/dienstleister_services/data_processing/: data_processing_service.py  manifest.yaml  run.py
dienstleister/src/dienstleister_services/edc_dienstleister/: edc_dienstleister_service.py  manifest.yaml  run.py
dienstleister/src/dienstleister_services/ml_training/: manifest.yaml  ml_training_service.py  run.py
docs/source/: conf.py  index.md  index.rst  references.md  usage.md
docs/source/_static/: custom.css
docs/source/code_docs/: anlagenbetreiber_docs.md  dienstleister_docs.md  index.md
docs/source/code_docs/anlagenbetreiber_docs/: index.md
docs/source/code_docs/anlagenbetreiber_docs/anlagenbetreiber/: index.md
docs/source/code_docs/anlagenbetreiber_docs/anlagenbetreiber/dataset/: index.md  inital_annotated_dataset_docs.md
docs/source/code_docs/anlagenbetreiber_docs/anlagenbetreiber/logging/: KIOptiPack_banner_docs.md  index.md  wzl_banner_docs.md
docs/source/code_docs/anlagenbetreiber_docs/anlagenbetreiber_services/: index.md
docs/source/code_docs/dienstleister_docs/: index.md
docs/source/code_docs/dienstleister_docs/dienstleister/: index.md
docs/source/code_docs/dienstleister_docs/dienstleister/logging/: index.md  (+2 more)
docs/source/code_docs/dienstleister_docs/dienstleister_services/: index.md
docs/source/code_docs/hersteller_docs/: index.md
docs/source/code_docs/hersteller_docs/hersteller/: index.md
docs/source/code_docs/hersteller_docs/hersteller_services/: index.md
docs/source/references/: index.md  references.md
docs/source/user guide/: index.md  usage.md
hersteller/: MANIFEST.in  README.md  configure.py  pyproject.toml  requirements.txt
hersteller/deployments/full/: .env  deployment.yaml
hersteller/deployments/production/: .env
hersteller/requirements/: requirements.all.txt
hersteller/src/hersteller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hersteller/src/hersteller/data_processing/: pipeline_operations.py
hersteller/src/hersteller/logging/: wzl_banner.py
hersteller/src/hersteller/ml_lifecycle_utils/: edc_endpoints.py  ml_lifecycle_broker_facade.py  ml_lifecycle_subjects_name.py
hersteller/src/hersteller_services/edc_hersteller/: edc_hersteller_service.py  manifest.yaml  run.py
hersteller/src/hersteller_services/ml_serving/: manifest.yaml  ml_serving_service.py  run.py
ml-standalone/: data_standalone.py  edc_consumer.py  ml_code_standalone.py  openhubdays-data.csv
(+36 files in other folders)
