# ATTENTION: Parts of this file are managed automatically!
# This refers to build-system, project.version, tool and nuitka.


[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "anlagenbetreiber"
version = "0.0.0"           # will be changed automatically
authors = [{name = "useradmin" },]
description = ""
readme = "README.md"
requires-python = "~=3.10"
dependencies = ["fastiot>=1.1,<2"]

# will be changed automatically
[project.optional-dependencies]
all = [
    "flask",
    "pymongo",
    "pandas",
    "Quart"
]
doc = [
    "sphinx>=8.2.0"
]

# will be changed automatically
[tool.setuptools.packages.find]
where = ["src"]
include = ["anlagenbetreiber"]
exclude = ["anlagenbetreiber_tests", "anlagenbetreiber_services"]