# ATTENTION: Parts of this file are managed automatically!
# This refers to build-system, project.version, tool and nuitka.


[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "dienstleister"
version = "0.0.0"           # will be changed automatically
authors = [{name = "useradmin" },]
description = ""
readme = "README.md"
requires-python = "~=3.10"
dependencies = ["fastiot>=1.1,<2"]

# will be changed automatically
[project.optional-dependencies]
all = [
    "flask",
    "pymongo",
    "pandas",
    "Quart",
    "torch",
    "numpy",
    "scikit-learn",
    "mlflow",
    "requests",
]

doc = [
    "sphinx",
    "myst-parser",
    "furo"
]

# will be changed automatically
[tool.setuptools.packages.find]
where = [
    "src",
    "src/dienstleister_services",
]
include = [
    "dienstleister",
    "dienstleister.data_processing",
    "dienstleister.logging",
    "dienstleister.ml_lifecycle_utils",
    "dienstleister.ml_training",

    "dienstleister_services",
    "dienstleister_services.data_processing",
    "dienstleister_services.edc_dienstleister",
    "dienstleister_services.ml_training",
]
exclude = ["dienstleister_tests"]