# ATTENTION: Parts of this file are managed automatically!
# This refers to build-system, project.version, tool and nuitka.


[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "hersteller"
version = "0.0.0"           # will be changed automatically
authors = [{name = "useradmin" },]
description = ""
readme = "README.md"
requires-python = "~=3.10"
dependencies = ["fastiot>=1.1,<2"]

# will be changed automatically
[project.optional-dependencies]
all = [
    "flask",
    "pymongo",
    "pandas",
    "Quart",
    "torch",
    "numpy",
    "scikit-learn",
    "mlflow",
]

doc = [
    "sphinx",
    "myst-parser",
    "furo"
]

# will be changed automatically
[tool.setuptools.packages.find]
where = [
    "src",
    "src/hersteller_services",
]
include = [
    "hersteller",
    "hersteller.data_processing",
    "hersteller.logging",
    "hersteller.ml_lifecycle_utils",

    "hersteller_services",
    "hersteller_services.edc_hersteller",
    "hersteller_services.ml_serving",
]
exclude = ["hersteller_tests"]